Create a carto-card component

--- a/src/index.html
+++ b/src/index.html
@@ -199,6 +199,7 @@
 </head>
 
 <body style="background-color: #EEE">
+
   <!-- basic component 
   <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
   -->
@@ -207,11 +208,11 @@
 
   <div id="map"></div>
 
-  <carto-layers></carto-layers>
+  <carto-layers title="My carto-layers" subtitle="These are my layers..."></carto-layers>
 
   <br/>
 
-  <category-widget title="My Categories" maximum="100"></category-widget>
+  <category-widget title="My category-widget" subtitle="Clic to select n categories" maximum="100"></category-widget>
 
   <script>
     const map = getBaseMap();
